# Quetzalcoatl

./: meson.build
include/: compile_error.hpp  datatype.hpp  source_location.hpp  unicode.hpp
include/frontend/: ast.hpp  compile_info.hpp  datatype.hpp  diagnostics.hpp  filetable.hpp  scope.hpp  source_location.hpp  stringtable.hpp  type.hpp
include/lexer/: filetable.hpp  lexer.hpp  stringtable.hpp  token.hpp
include/parser/: parseexception.hpp  parser.hpp
src/: datatype.cpp  main.cpp  unicode.cpp
src/frontend/: ast.cpp  compile_info.cpp  datatype.cpp  diagnostics.cpp  filetable.cpp  scope.cpp  stringtable.cpp  type.cpp  value.cpp
src/lexer/: filetable.cpp  lexer.cpp  stringtable.cpp  token.cpp
src/parser/: parser.cpp
test/: basic.in  chars.in  integers.in  operators.in  preprocessor.in  statement.in  strings.in
